# PropRadar

./: .env.example  .gitignore  README.md  money.py  pp.py  pyproject.toml  sleeper.py  utils.py
.github/workflows/: deploy-dashboard.yml
docs/: index.html
docs/css/: style.css
docs/data/: stats.json
docs/js/: app.js  charts.js
scripts/: fetch_fixtures.py  fetch_odds_api_fixtures.py  fetch_sleeper_fixtures.py  fixture_config.py  publish_dashboard.sh  slice_prizepicks_fixture.py
src/: utils.py
src/dashboard/: README.md  __init__.py  config.py  export.py  sheet_reader.py  sleeper_enrich.py  stats.py
src/prizePicks/: gobbyFinder.py  pp.py  savePP.py
src/sleeper/: autoSleeper.py  saveSleeper.py  sleepUtils.py  sleeper.py
tests/: conftest.py  helpers.py  test_auto_sleeper.py  test_dashboard_stats.py  test_prizepicks.py  test_save_pp.py  test_save_sleeper.py  test_sleep_utils.py  test_sleeper.py  test_utils.py
tests/fixtures/dashboard/: sample_sheet_rows.json
tests/fixtures/odds_api/: nba_events.json  nba_player_points.json  nba_player_points_alternate.json  nba_player_rebounds.json  nba_player_rebounds_alternate.json  out_of_usage_credits.json
tests/fixtures/prizepicks/: nba_projections.json
tests/fixtures/sleeper/: nba_lines_available.json  nba_lines_promos.json  nba_players.json
tests/fixtures/sleeper/graphql/: available_line_promotions.json  my_parlays_completed.json  my_parlays_pending.json
