[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PropRadar"
version = "0.1.0"
description = "PrizePicks and Sleeper betting automation and odds analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "discordwebhook>=1.0.3",
    "gspread>=6.1.0",
    "numpy>=1.25.0",
    "oauth2client>=4.1.3",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "selenium>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
